--- a/dresstore.html
+++ b/dresstore.html
@@ -150,6 +150,22 @@
                 <textarea id="address" name="address" rows="1" required></textarea>
 
                 <button type="submit">Submit</button>
+
+                <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Example</title>
+</head>
+<body>
+
+    <p>Contact us via email: <a href="alucas@student.antilles.vi">info@example.com</a></p>
+
+    <!-- With subject and body parameters -->
+    <p>Contact us with a specific subject: <a href="alucas@student.antilles.vi?subject=Question">info@example.com</a></p>
+
+    <!-- With subject and body parameters -->
+    <p>Contact us with a specific subject and body: <a href="alucas@student.antilles.vi?subject=Question&body=Hello%20there!">info@example.com</a></p>
+
             </form>
         </section>
     </nav>
